# rust-evm-learning

./: .gitignore  Cargo.toml  GUIDE.md  README.md
.github/workflows/: ci.yml
src/: disasm.rs  lib.rs  machine.rs  opcodes.rs
tests/: cli_tests.rs
