[package]
name = "evm_from_scratch_rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal, educational EVM implemented in Rust to mirror the evm-from-scratch book structure."
repository = "https://example.invalid/evm-from-scratch-rust"

[lib]
name = "evm_from_scratch"
path = "src/lib.rs"

[[bin]]
name = "evm-run"
path = "src/bin/run.rs"

[dependencies]
primitive-types = "0.12"
tiny-keccak = { version = "2.0", features = ["keccak"] }
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
