[package]
name = "evm_in_rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal, educational EVM implemented in Rust"

[lib]
name = "evm_in_rust"
path = "src/lib.rs"

[[bin]]
name = "evm-run"
path = "src/bin/run.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
primitive-types = "0.12"
tiny-keccak = { version = "2.0", features = ["keccak"] }
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
hex = "0.4"
